--- a/bower.json
+++ b/bower.json
@@ -18,19 +18,20 @@
   "dependencies": {
     "angular": "~1.5.5",
     "angular-ui-router": "~0.2.18",
-    "angular-animate": "^1.4.0",
-    "angular-aria": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-messages": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
+    "angular-animate": "~1.4.0",
+    "angular-aria": "~1.4.0",
+    "angular-cookies": "~1.4.0",
+    "angular-messages": "~1.4.0",
+    "angular-resource": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "angular-sanitize": "~1.4.0",
+    "angular-touch": "~1.4.0",
     "bootstrap": "~3.3.6",
-    "font-awesome": "fontawesome#~4.6.1"
+    "font-awesome": "fontawesome#~4.6.1",
+    "ng-dialog": "~0.6.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "~1.4.0"
   },
   "appPath": "app",
   "moduleName": "dappstackAngularMasterApp",
