--- a/bower.json
+++ b/bower.json
@@ -25,24 +25,15 @@
     "angular-resource": "~1.4.0",
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
-    "bootstrap": "~3.3.6",
     "font-awesome": "fontawesome#~4.6.1",
-    "ng-dialog": "~0.6.0"
+    "angular-bootstrap": "~2.4.0",
+    "bootstrap": "boostrap#^3.3.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
   },
   "appPath": "app",
   "moduleName": "dappstackAngularMasterApp",
-  "overrides": {
-    "bootstrap": {
-      "main": [
-        "less/bootstrap.less",
-        "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js"
-      ]
-    }
-  },
   "resolutions": {
     "angular": "~1.5.5"
   }
