--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,8 @@
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
     "font-awesome": "fontawesome#~4.6.1",
-    "angular-bootstrap": "~2.4.0",
-    "bootstrap": "boostrap#^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-bootstrap": "^2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
