--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,6 @@
   ],
   "dependencies": {
     "angular": "~1.5.5",
-    "angular-ui-router": "~0.2.18",
     "angular-animate": "~1.4.0",
     "angular-aria": "~1.4.0",
     "angular-cookies": "~1.4.0",
@@ -27,7 +26,8 @@
     "angular-touch": "~1.4.0",
     "font-awesome": "fontawesome#~4.6.1",
     "bootstrap": "^3.3.7",
-    "angular-bootstrap": "^2.4.0"
+    "angular-bootstrap": "^2.4.0",
+    "angular-ui-router": "1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
