--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "font-awesome": "fontawesome#~4.6.1",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.4.0",
-    "angular-ui-router": "1"
+    "angular-ui-router": "1",
+    "angular-css": "^1.0.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
