--- a/bower.json
+++ b/bower.json
@@ -27,15 +27,19 @@
     "font-awesome": "fontawesome#~4.6.1",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.4.0",
-    "angular-ui-router": "1",
-    "angular-css": "^1.0.8"
+    "angular-css": "^1.0.8",
+    "angular-ui-router-uib-modal": "https://github.com/commity-cz/angular-ui-router-uib-modal.git#^0.0.12",
+    "angular-ui-router": "1.0.3",
+    "ng-dialog": "^1.1.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.0"
+    "angular-mocks": "~1.4.0",
+    "ui-router-extras": "^0.1.3"
   },
   "appPath": "app",
   "moduleName": "dappstackAngularMasterApp",
   "resolutions": {
-    "angular": "~1.5.5"
+    "angular": "~1.5.5",
+    "angular-ui-router": "1.0.3"
   }
 }
