--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular": "^1.6.4",
+    "angular-ui-router": "^1.0.3",
+    "karma": "^1.7.0",
+    "ui-router-sticky-states": "^1.2.0"
+  }
 }
