--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.5.5",
-    "angular-animate": "~1.4.0",
-    "angular-aria": "~1.4.0",
+    "angular": "1.6.3",
+    "angular-animate": "1.6.3",
+    "angular-aria": "1.6.3",
     "angular-cookies": "~1.4.0",
     "angular-messages": "~1.4.0",
     "angular-resource": "~1.4.0",
@@ -28,9 +28,9 @@
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.4.0",
     "angular-css": "^1.0.8",
-    "angular-ui-router-uib-modal": "https://github.com/commity-cz/angular-ui-router-uib-modal.git#^0.0.12",
     "angular-ui-router": "1.0.3",
-    "ng-dialog": "^1.1.0"
+    "ng-dialog": "^1.1.0",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0",
@@ -39,7 +39,7 @@
   "appPath": "app",
   "moduleName": "dappstackAngularMasterApp",
   "resolutions": {
-    "angular": "~1.5.5",
+    "angular": "1.6.3",
     "angular-ui-router": "1.0.3"
   }
 }
