--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
     "font-awesome": "fontawesome#~4.6.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-alpha.6",
     "angular-bootstrap": "^2.4.0",
     "angular-css": "^1.0.8",
     "angular-ui-router": "1.0.3",
@@ -40,6 +40,7 @@
   "moduleName": "dappstackAngularMasterApp",
   "resolutions": {
     "angular": "1.6.3",
-    "angular-ui-router": "1.0.3"
+    "angular-ui-router": "1.0.3",
+    "bootstrap": "v4.0.0-alpha.6"
   }
 }
