--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "dappstackangularmaster",
   "private": true,
-  "scripts":{
+  "scripts": {
     "start": "node node_modules/.bin/webpack-dev-server --content-base app"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.3.1",
     "gulp-cache": "^0.2.10",
@@ -28,6 +30,8 @@
     "open": "0.0.5",
     "rimraf": "^2.4.0",
     "run-sequence": "^1.1.1",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "wiredep": "^2.2.2"
@@ -36,9 +40,16 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "angular": "^1.5.1",
-    "angular-ui-router": "^1.0.3",
+    "@uirouter/angularjs": "^1.0.3",
+    "angular": "^1.6.5",
+    "angular-animate": "^1.6.5",
+    "angular-file-upload": "^2.5.0",
+    "angular-resource": "^1.6.5",
+    "angular-ui-bootstrap": "^2.5.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "karma": "^1.7.0",
+    "ng-dialog": "^1.3.0",
     "ui-router-sticky-states": "^1.2.0"
   }
 }
