--- a/package.json
+++ b/package.json
@@ -2,32 +2,17 @@
   "name": "dappstackangularmaster",
   "private": true,
   "scripts": {
-    "start": "node node_modules/.bin/webpack-dev-server --content-base app"
+    "start": "node node_modules/.bin/webpack-dev-server --content-base app",
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-cache": "^0.2.10",
-    "gulp-connect": "^2.2.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-jshint": "^1.11.1",
-    "gulp-karma": "0.0.4",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-ng-annotate": "^1.0.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rev": "^5.0.1",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^3.0.0",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.2.4",
+    "html-webpack-plugin": "^2.29.0",
     "jshint-stylish": "^1.0.0",
     "lazypipe": "^0.2.4",
     "open": "0.0.5",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.4.0",
     "run-sequence": "^1.1.1",
     "style-loader": "^0.18.2",
@@ -46,6 +31,7 @@
     "angular-file-upload": "^2.5.0",
     "angular-resource": "^1.6.5",
     "angular-ui-bootstrap": "^2.5.0",
+    "angular-ui-router": "^1.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "karma": "^1.7.0",
